--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,7 +17,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
+    "mailgen": "^2.0.29",
+    "resend": "^4.5.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
